# rig-extra

./: Cargo.toml  LICENSE  justfile
examples/: candle.rs  openai_rt_cpal.rs  openai_rt_simple.rs  routing.rs
src/: lib.rs  prompt_templating.rs
src/providers/: mod.rs
src/providers/candle/: candle.rs  completion.rs  mod.rs
