[package]
name = "rig-extra"
version = "0.0.0"
edition = "2024"

[[example]]
name = "routing"
required-features = []

[dependencies]
rig-core = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
anyhow = "1.0.98"
tokio = "1.45.1"

# Candle
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
hf-hub = { version = "0.4.2", optional = true }
tokenizers = { version = "0.21.1", optional = true }
serde_json = { version = "1.0.140", optional = true }

[dev-dependencies]
rig-core = { version = "0.13.0", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["candle"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:serde_json",
]
