[package]
name = "rig-experimental"
version = "0.0.1"
license = "MIT"
homepage = "https://github.com/joshua-mo-143/rig-experimental"
repository = "https://github.com/joshua-mo-143/rig-experimental"
description = "An experimental companion crate for `rig`, the agentic AI framework for building modular, lightweight agents."
keywords = ["agents", "ai", "llms"]
edition = "2024"

[[example]]
name = "candle"
required-features = []

[[example]]
name = "elevenlabs"
required-features = []

[[example]]
name = "openai_rt"
required-features = []

[[example]]
name = "routing"
required-features = []

[dependencies]
rig-core = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
anyhow = "1.0.98"
tokio = "1.45.1"
tera = "1.20.0"

# Candle
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
hf-hub = { version = "0.4.2", optional = true }
tokenizers = { version = "0.21.1", optional = true }
serde_json = { version = "1.0.140", optional = true }
futures = "0.3.31"
bytes = "1.10.1"
reqwest = { version = "0.12.20", features = ["json"], optional = true }

# Required for OpenAI Realtime API
reqwest-websocket = { version = "0.5.0", features = ["json"], optional = true }

[dev-dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
hound = "3.5.1"
rig-core = { version = "0.13.0", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }


[features]
default = ["providers"]
providers = ["candle", "elevenlabs", "openai_realtime"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:serde_json",
]
elevenlabs = ["audio", "dep:reqwest"]
openai_realtime = ["dep:reqwest", "dep:reqwest-websocket"]
image = ["rig-core/image"]
audio = ["rig-core/audio"]
